Fix mobile form overflow

--- a/style.css
+++ b/style.css
@@ -162,9 +162,9 @@ ul {
 
 fieldset {
     height: 90%;
-    width: 80%;
+    max-width: 90%;
     border: none;
-    margin: 10px 40px;
+    margin: 10px 20px;
     display: flex;
     flex-direction: column;
 }
@@ -208,7 +208,7 @@ input::placeholder {
 
 #states_postalCode {
     display: grid;
-    grid-template-columns: 100px 100px;
+    grid-template-columns: repeat(2, minmax(50px, 100px));
 }
 
 #states {
@@ -236,7 +236,7 @@ legend {
 
 .expirationDate {
     display: grid;
-    grid-template-columns: 100px 100px;
+    grid-template-columns: repeat(2, minmax(50px, 100px));
     column-gap: 10px;
 }
 
@@ -244,7 +244,7 @@ legend {
     grid-column: span 2;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 700px) {
     
     .body {
         background-image: url(./images/Background-image.png);
@@ -260,10 +260,5 @@ legend {
     .footer {
         flex-direction: row;
         justify-content: space-around;
-    }
-
-    fieldset {
-        width: 90%;
-        margin: 10px 20px;
     }
 }
